--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -371,7 +371,7 @@ limitations under the License. -->
   <string name="filter_marketcap_desc">Market Capitalization is in Millions.\nFor example 42 is 42000000 = 42M Market Cap.\n\nLarge-Cap is more than 10B\nMid-Cap is between 2B and 10B\nSmall-Cap is between 300M and 2B\nMicro-Cap is between 50M and 300M\nNano-Cap is below 50M</string>
   <string name="filter_quotetype_name">Quote type</string>
   <string name="filter_quotetype_desc"></string>
-  <string name="filter_accounttype_name">Account</string>
+  <string name="filter_accounttype_name">Asset Account</string>
   <string name="filter_accounttype_desc"></string>
   <string name="filter_stockexchangename_name">Stock exchange name</string>
   <string name="filter_stockexchangename_desc"></string>
