--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -619,5 +619,5 @@ limitations under the License. -->
   <string name="account_overview_headline">Konto \'%1$s\'</string>
   <string name="transaction_bought">Gekauft</string>
   <string name="transaction_sold">Verkauft</string>
-  <string name="transaction_stats">%1$d mal Verkauft\n%2$d mal Gekauft\n%3$d mal Dividende bekommen</string>
+  <string name="transaction_stats">%1$d x Verkauft\n%2$d x Gekauft\n%3$d x Dividende bekommen</string>
 </resources>
