--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -596,7 +596,7 @@ limitations under the License. -->
   <string name="account_overview_headline">Account \'%1$s\'</string>
   <string name="transaction_bought">Bought</string>
   <string name="transaction_sold">Sold</string>
-  <string name="transaction_stats">%1$d x Bought\n%2$d x Sold\n%3$d x Received Dividend</string>
+  <string name="transaction_dividendReceived">Dividend Received</string>
 
   <string-array name="predefined_groups">
     <item>Buy</item>
