--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -172,7 +172,7 @@ limitations under the License. -->
   <string name="delete_all_desc">Entfernt alle Wertpapiere und die dazugehörigen Daten.</string>
   <string name="quantity_not_zero">Die Anzahl darf nicht 0 sein.</string>
   <string name="removed_quantity_exceed_existing">Sie entfernen mehr Wertpapiere als sie besitzen. Die Anzahl wird von %1$s auf %2$s korrigiert.</string>
-  <string name="price_not_zero">Der Preis darf nicht 0 sein.</string>
+  <string name="price_not_negative">Der Preis darf nicht negativ sein.</string>
   <string name="add_asset">Zum Wertpapierbestand hinzufügen</string>
   <string name="remove_asset">Vom Wertpapierbestand entfernen</string>
   <string name="current_assets">Wertpapierbestände</string>
