--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -343,9 +343,9 @@ limitations under the License. -->
   <string name="dividend_updated">Dividendenwert aktualisiert.</string>
   <string name="realtime">Immer Realtime verwenden</string>
   <string name="linegraph">Liniendiagramm</string>
-  <string name="use_chart_overlay_symbol">Vergleichskurve in der Chart-Darstellung</string>
-  <string name="use_chart_overlay_symbol_desc">Stellt einen zusätzlichen Verlauf eines anderen Wertpapierwerts zum Vergleich in der Chart-Darstellung dar.</string>
-  <string name="chart_overlay_symbol_title">Zu verwendendes Wertpapierkürzel</string>
+  <string name="use_chart_overlay_symbols">Vergleichskurven in der Chart-Darstellung</string>
+  <string name="use_chart_overlay_symbols_desc">Stellt einen zusätzlichen Verlauf andere Wertpapierwerte zum Vergleich in der Chart-Darstellung dar.</string>
+  <string name="chart_overlay_symbols_title">Zu verwendende Wertpapierkürzel</string>
   <string name="data_provider_details">Datensatz für %1$s</string>
   <string name="data_provider_details_sorted">[Sortiert]</string>
   <string name="data_provider_details_unsorted">[Unsortiert]</string>
