--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -321,7 +321,7 @@ limitations under the License. -->
   <string name="realtime">Always use Realtime</string>
   <string name="linegraph">Line graph</string>
   <string name="use_chart_overlay_symbols">Additional stock charts in the chart display</string>
-  <string name="use_chart_overlay_symbols_desc">Adds an additional stock charts of another symbol to the chart display.</string>
+  <string name="use_chart_overlay_symbols_desc">Adds an additional stock charts of another symbol to the chart display.\nColor sequence:\nGray, Red, Green, Yellow</string>
   <string name="chart_overlay_symbols_title">Additional stock symbols</string>
   <string name="data_provider_details">Data for %1$s</string>
   <string name="data_provider_details_sorted">[Sorted]</string>
