--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -470,6 +470,11 @@ limitations under the License. -->
   <string name="delayed_quote">Delayed Quote</string>
   <string name="nasdaq_real_time_price">Nasdaq Real Time Price</string>
   <string name="filter_regex_error_msg">The filter regex \'%1$s\' is not valid.</string>
+  <string name="transaction_column_date">Date</string>
+  <string name="transaction_column_symbol">Symbol</string>
+  <string name="transaction_column_type">Type</string>
+  <string name="transaction_column_account">Account</string>
+  <string name="transaction_column_data">Data</string>
   <string name="table_column_symbol">Symbol</string>
   <string name="table_column_Name">Name</string>
   <string name="table_column_MarketPrice">Market price</string>
