--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -497,7 +497,7 @@ limitations under the License. -->
   <string name="transaction_column_symbol">Wertpapier- kürzel</string>
   <string name="transaction_column_type">Typ</string>
   <string name="transaction_column_account">Konto</string>
-  <string name="transaction_column_data">Daten</string>
+  <string name="transaction_column_amount">Wert</string>
   <string name="table_column_symbol">Wertpapier- kürzel</string>
   <string name="table_column_Name">Name</string>
   <string name="table_column_MarketPrice">Marktpreis</string>
