--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -619,14 +619,22 @@ limitations under the License. -->
     <item>Group 4</item>
     <item>Group 5</item>
   </string-array>
+
   <string-array name="dividend_cycles">
     <item>Monthly</item>
     <item>Quarterly</item>
     <item>Semi Annual</item>
     <item>Annual</item>
   </string-array>
+
   <string-array name="filter_mode_items">
     <item>All filters must match (&amp;&amp;)</item>
     <item>At least one filter match (||)</item>
   </string-array>
+
+  <string-array name="stock_type_items">
+    <item>Stock</item>
+    <item>Crypto</item>
+  </string-array>
+
 </resources>
