--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -605,8 +605,9 @@ limitations under the License. -->
   <string name="transaction_sold">Sold</string>
   <string name="transaction_dividendReceived">Dividend Received</string>
   <string name="portfolio_overview_headline">Portfolio \'%1$s\'</string>
+    <string name="symbol_image">Symbol image</string>
 
-  <string-array name="predefined_groups">
+    <string-array name="predefined_groups">
     <item>Buy</item>
     <item>Sell</item>
     <item>Watch</item>
