--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -508,6 +508,7 @@ limitations under the License. -->
   <string name="add_selection">Add to the selection</string>
   <string name="remove_selection">Remove from the selection</string>
   <string name="app_theme">App Theme</string>
+  <string name="app_theme_textcolor_red">Textcolor on Red</string>
   <string name="summary_total_commissions">Total Commissions</string>
   <string name="calc_title">AI</string>
   <string name="calc_copy">Copy</string>
