--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -336,7 +336,7 @@ limitations under the License. -->
   <string name="dividend_received_summary_text">Gesamtdividendenbetrag</string>
   <string name="dividend_received_summary_account_text">Gesamtdividendenbetrag für Konto \'%1$s\':</string>
   <string name="dividend_headline">Dividende</string>
-  <string name="dividend_exdate">Ex-Dividend</string>
+  <string name="dividend_exdate">Ex-Dividendendatum</string>
   <string name="totaldividend_paid">Ausgezahlte Dividende</string>
   <string name="rename_symbol_title">Wertpapier umbenennen</string>
   <string name="rename_symbol_desc">Benennt das Wertpapier in einem anderen Namen um.</string>
