--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -102,6 +102,7 @@ limitations under the License. -->
   <string name="sort_profit_percentage">Nach Gewinn \u0025 sortieren</string>
   <string name="sort_dividend_percentage">Nach Dividende \u0025 sortieren</string>
   <string name="sort_group">Nach Gruppe sortieren</string>
+  <string name="sort_marker">Nach Markierung sortieren</string>
   <string name="sort_activity">Nach Aktivitätsdatum sortieren</string>
 
   <string name="ok">OK</string>
