--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -383,6 +383,8 @@ limitations under the License. -->
   <string name="filter_stockexchangename_desc"></string>
   <string name="filter_group_name">Group</string>
   <string name="filter_group_desc"></string>
+  <string name="filter_marker_name">Marker</string>
+  <string name="filter_marker_desc"></string>
   <string name="filter_note_name">Note</string>
   <string name="filter_note_desc"></string>
   <string name="filter_dividendnote_name">Dividend note</string>
