--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -82,6 +82,7 @@ limitations under the License. -->
   <string-array name="dataprovider_items">
     <item>Yahoo Finanzdaten</item>
     <item>Coingecko (Kryptowährung)</item>
+    <item>Coinpaprika (Kryptowährung)</item>
   </string-array>
 
   <!-- Preference Titles -->
