--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -643,8 +643,8 @@ limitations under the License. -->
 
   <string-array name="dataprovider_items">
     <item>Yahoo Finance</item>
-    <item>Coingecko (Cryptocurrency)</item>
-    <item>Coinpaprika (Cryptocurrency)</item>
+    <item>Coingecko (Cryptocurrency, max 50 calls/min)</item>
+    <item>Coinpaprika (Cryptocurrency, updated every 2min)</item>
   </string-array>
 
 </resources>
