--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -633,6 +633,7 @@ limitations under the License. -->
     <item>Yahoo Finance</item>
     <item>Coingecko (Cryptocurrency, max 50 calls/min)</item>
     <item>Coinpaprika (Cryptocurrency, updated every 2min)</item>
+    <item>Gemini (Cryptocurrency, max 120 calls/min)</item>
   </string-array>
 
 </resources>
